# multiconnect

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  package.json  shell.nix  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: rust-build.yml  yarn-build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/dev/totaltax/multiconnect/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/totaltax/multiconnect/: MainActivity.kt
android/app/src/main/java/dev/totaltax/multiconnect/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/dev/totaltax/multiconnect/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: tsconfig.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
multiconnect-config/: Cargo.toml
multiconnect-config/src/: configs.rs  lib.rs
multiconnect-core/: Cargo.toml
multiconnect-core/proto/local/: debug.proto  peer.proto  transfer.proto
multiconnect-core/proto/p2p/: acknowledge.proto  ping.proto  transfer.proto
multiconnect-core/proto/shared/: notify.proto
multiconnect-core/src/: impls.rs  lib.rs
multiconnect-daemon/: Cargo.toml  keys  testfile.bin.tmp
multiconnect-daemon/src/: config.rs  lib.rs  main.rs  store.rs
multiconnect-daemon/src/modules/: debug.rs  discovery.rs  file_transfer.rs  mod.rs  pairing.rs  store.rs
multiconnect-daemon/src/networking/: keystore.rs  mod.rs  pairing.rs  peer.rs  protocols.rs  store.rs
multiconnect-frontend/: Cargo.toml  tauri.conf.json
multiconnect-frontend/src/: controller.rs  daemon.rs  lib.rs  main.rs
multiconnect-frontend/src/modules/: file_transfer.rs  mod.rs  pairing.rs
multiconnect-macros/: Cargo.toml
multiconnect-macros/src/: lib.rs
multiconnect-protocol/: Cargo.toml  build.rs
multiconnect-protocol/proto/: acknowledge.proto  notify.proto  peer.proto  ping.proto  sms.proto  transfer.proto
multiconnect-protocol/proto/local/: peer.proto  sms.proto  transfer.proto
multiconnect-protocol/proto/p2p/: peer.proto  transfer.proto
multiconnect-protocol/proto/shared/: peer.proto
multiconnect-protocol/src/: daemon.rs  impls.rs  lib.rs  message.rs  p2p.rs  packets.rs  protocols.rs
multiconnect-protocol/src/daemon/: mod.rs  packets.rs
multiconnect-protocol/src/p2p/: mod.rs
src/: app.css  app.html
src-next/: package-lock.json  package.json
src-next/src/app/: page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/multiconnect-networking/: Cargo.toml
src-tauri/multiconnect-networking/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/lib/: commands.ts  logger.ts  stores.ts  theme.ts  types.ts
src/lib/components/: DeviceList.svelte
src/lib/components/modules/: Debug.svelte  FileTransfer.svelte
src/lib/componets/: DeviceList.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/device/[peer]/: +page.svelte  +page.ts
