[package]
name = "multiconnect-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "multiconnect_core"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prost = "0.14"
prost-types = "0.14"
thiserror = "2.0.12"
uid = "0.1.8"
libp2p = { version = "0.55.0", features = ["serde"] }
bincode = "=1.3.3"
async-trait = "0.1.88"
uuid = "1.16.0"
os_info = "3.12.0"
gethostname = "1.0.2"

[target.'cfg(windows)'.dependencies]
wmi = "0.17.2"

[build-dependencies]
prost-build = "0.14.1"
