[package]
name = "multiconnect-daemon"
version = "0.0.0-DEV"
edition = "2021"

[[bin]]
name = "multiconnectd"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.55.0", features = ["tcp", "quic", "ping", "serde", "mdns", "noise", "yamux", "dns", "tokio", "macros", "request-response", "identify", ] }

multiconnect-protocol = { path = "../multiconnect-protocol"}
multiconnect-config = { path = "../multiconnect-config" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.26"
pretty_env_logger = "0.5.0"
bincode = "1.3.3"
async-trait = "0.1.86"
prost = "0.13"
tokio-stream = { version = "0.1.17", features = [ "sync" ] }
port_check = "0.2.1"
libp2p-stream = "0.3.0-alpha"
tokio-util = { version = "0.7.13", features = [ "codec", "compat"]}
lazy_static = "1.5.0"
uuid = "1.16.0"
