[package]
name = "multiconnect"
version = "0.0.0-DEV"
description = "Multiconnect"
authors = ["totaltax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multiconnect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multiconnect-core = { path = "../multiconnect-core" }
multiconnect-config = { path = "../multiconnect-config" }
tokio = { version = "1", features = ["full", "tracing"] }
pretty_env_logger = "0.5.0"
log = "0.4.27"
bincode = "=1.3.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.16.0", features = ["v4"] }
fern = { version = "0.7.1", features = ["colored"] }
argh = "0.1.13"
humantime = "2.2.0"
async-trait = "0.1.88"
libp2p-core = "0.43.1"
tauri-plugin-dialog = "2"
tracing = "0.1.41"
