[package]
name = "multiconnect-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "multiconnect_protocol"
path = "src/lib.rs"

[dependencies]
log = "0.4.25"
rand = "0.9.0"
serde = { version = "1.0.218", features = [ "derive" ]}
tokio = { version = "1", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0.11"
uid = "0.1.8"
libp2p = { version = "0.55.0", features = [ "serde" ]}
bincode = "1.3.3"
async-trait = "0.1.85"

[build-dependencies]
prost-build = "0.13.5"

